# PX4-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Kconfig  Makefile  PERFORMANCE_ANALYSIS.md  circle.yml  cloudbuild.yaml  manifest.json  package.xml  uORBTopics.hpp.in
src/drivers/zromdisk/: CMakeLists.txt  drv_zromdisk.cpp
src/lib/: CMakeLists.txt
src/lib/CollisionPrevention/: CollisionPrevention.cpp  CollisionPrevention.hpp
src/lib/FlightTasks/: CMakeLists.txt  FlightTasks.cpp  FlightTasks.hpp
src/lib/WeatherVane/: WeatherVane.cpp
src/lib/actor/: ORBActor.hpp
src/lib/actuator_effectiveness/: ActuatorEffectiveness.cpp  ActuatorEffectivenessControlSurfaces.cpp  ActuatorEffectivenessRotorsTest.cpp  CMakeLists.txt
src/lib/airspeed/: CMakeLists.txt
src/lib/airspeed_validator/: AirspeedValidator.cpp  AirspeedValidator.hpp
src/lib/avoidance/: ObstacleAvoidance.hpp  ObstacleAvoidance_dummy.hpp
src/lib/battery/: CMakeLists.txt  battery.cpp  battery.h  battery_params.c
src/lib/bezier/: BezierNTest.cpp
src/lib/calibration/: MagnetometerCalibration.cpp  MagnetometerCalibration.hpp
src/lib/cdev/: CDev.cpp  CDev.hpp
src/lib/circuit_breaker/: circuit_breaker_params.c
src/lib/collision_prevention/: CollisionPrevention.hpp
src/lib/common/: CMakeLists.txt  module.cpp  px4_getopt.c  shutdown.cpp
src/lib/control_allocation/: CMakeLists.txt  ControlAllocation.hpp
src/lib/controllib/: BiQuad.cpp  BlockLowPass.cpp  BlockLowPass2.cpp  CMakeLists.txt  gen_iir_filters.py  iir_filters.h
src/lib/conversion/: CMakeLists.txt  rotation.cpp  rotation.h
src/lib/device/: CMakeLists.txt  device_nuttx.h  i2c_nuttx.h  i2c_posix.h  spi.cpp  spi.h  vdev.cpp  vdev.h  vdev_posix.cpp  vfile.h
src/lib/drivers/: CMakeLists.txt
src/lib/external_lgpl/: CMakeLists.txt
src/lib/flight_modes/: FlightMode.hpp  MulticopterAcro.hpp
src/lib/flight_test_input/: CMakeLists.txt  flight_test_input.cpp  flight_test_input.h  flight_test_input_params.c
src/lib/geo/: CMakeLists.txt  geo.c  geo.cpp  geo.h
src/lib/hx_stream/: CMakeLists.txt
src/lib/hysteresis/: CMakeLists.txt  Hysteresis.cpp  Hysteresis.hpp  hysteresis.h
src/lib/launchdetection/: CMakeLists.txt
src/lib/led/: CMakeLists.txt  led.cpp
src/lib/ledcontroller/: CMakeLists.txt  led.cpp
src/lib/log/: CMakeLists.txt  mavlink_log.c  px4_log.c  px4_log.h
src/lib/magnetometer_bias_estimator/: MagnetometerBiasEstimator.hpp
src/lib/mathlib/: CMakeLists.txt  mathlib.h
src/lib/mixer/: CMakeLists.txt  HelicopterMixer.cpp  HelicopterMixer.hpp  Mixer.cpp  Mixer.hpp  MixerGroup.cpp  MixerGroup.hpp  MultirotorMixer.cpp  MultirotorMixer.hpp  NullMixer.hpp  SimpleMixer.cpp  SimpleMixer.hpp  load_mixer_file.cpp  mixer.cpp  mixer.h  mixer_group.cpp  mixer_helicopter.cpp  mixer_load.c  mixer_multirotor.cpp  mixer_multirotor_6dof.cpp  mixer_multirotor_6dof.hpp  mixer_simple.cpp
src/lib/mixer_module/: CMakeLists.txt  actuator_test.cpp  actuator_test.hpp  mixer_module.cpp  mixer_module.hpp  mixer_module_tests.cpp  pwm_mixer_module.cpp  pwm_mixer_module.hpp
src/lib/motion_planning/: VelocitySmoothing.cpp  VelocitySmoothingTest.cpp  test_velocity_smoothing.cpp
src/lib/nshlib/: CMakeLists.txt  nsh.h  nsh_builtin.c  nsh_codeccmd.c  nsh_command.c  nsh_config.h  nsh_console.c  nsh_console.h  nsh_consolemain.c  nsh_dbgcmds.c  nsh_ddcmd.c  nsh_envcmds.c  nsh_fileapps.c  nsh_fscmds.c  nsh_fsutils.c  nsh_init.c  nsh_login.c  nsh_main.c  nsh_mmcmds.c  nsh_mntcmds.c  nsh_modcmds.c  nsh_netcmds.c  nsh_netinit.c  nsh_parse.c  nsh_passwdcmds.c  nsh_printf.c  nsh_proccmds.c  nsh_romfsetc.c  nsh_routecmds.c  nsh_script.c  nsh_session.c  nsh_stdlogin.c  nsh_stdsession.c  nsh_syscmds.c  nsh_system.c  nsh_telnetd.c  nsh_telnetlogin.c  nsh_test.c  nsh_timcmds.c  nsh_usbconsole.c  (+5 more)
src/lib/output_limit/: CMakeLists.txt
src/lib/param/: CMakeLists.txt  param.c  param_shmem.c  px_process_params.py
src/lib/parameters/: CMakeLists.txt  ParameterBackend.cpp  ParameterBackend.hpp  ParameterServer.cpp  ParameterServer.hpp  param.c  param.h  param_shmem.c  param_translation.cpp  parameters.cpp  parameters_injected.xml  parameters_shmem.cpp  px_process_params.py
src/lib/perf/: CMakeLists.txt  PerfCounter.hpp  perf_counter.c  perf_counter.cpp  perf_counter.h
src/lib/perf_counter/: CMakeLists.txt  perf_counter.c  perf_counter.h
src/lib/pid/: CMakeLists.txt  pid.c
src/lib/pwm/: pwm_aux_params.yaml  pwm_extra_params.yaml  pwm_main_params.yaml
src/lib/pwm_limit/: CMakeLists.txt
src/lib/rate_control/: rate_control.cpp
src/lib/rc/: CMakeLists.txt  dsm.cpp  dsm.h  srxl.cpp  srxl.h
src/lib/runway_takeoff/: CMakeLists.txt
src/lib/sensor_calibration/: Accelerometer.cpp  Accelerometer.hpp  Barometer.cpp  Barometer.hpp  CMakeLists.txt  DifferentialPressure.cpp  DifferentialPressure.hpp  Gyroscope.cpp  Gyroscope.hpp  Magnetometer.cpp  Magnetometer.hpp  Utilities.cpp  Utilities.hpp
src/lib/sik_radio/: CMakeLists.txt  sik_radio.cpp  sik_radio.hpp  sik_radio_params.c
src/lib/simulation/: AeroSeg.hpp
src/lib/systemlib/: CMakeLists.txt  battery_params.c  board_serial.c  circuit_breaker.cpp  conversions.c  conversions.h  cpuload.c  cpuload.cpp  hardfault_log.h  mavlink_log.cpp  otp.c  ppm_decode.c  print_load_nuttx.cpp  print_load_posix.c  printload.h  rc_check.c  rc_check.h  system_params.c
src/lib/tailsitter_recovery/: CMakeLists.txt
src/lib/tecs/: TECS.cpp
src/lib/terrain_estimation/: CMakeLists.txt  terrain_estimator.cpp  terrain_estimator.h
src/lib/timesync/: Timesync.cpp  Timesync.hpp
src/lib/tinybson/: CMakeLists.txt  tinybson.c  tinybson.cpp
src/lib/version/: CMakeLists.txt
src/lib/weather_vane/: WeatherVane.hpp
src/modules/ukf24/: CMakeLists.txt  Kconfig  UKF24.cpp  UKF24.hpp  backup.cpp  ekf2_params.c  ekf2_params_multi.c  ekf2_params_selector.c  ekf2_params_volatile.c
src/systemcmds/: CMakeLists.txt
src/systemcmds/bl_update/: CMakeLists.txt  bl_update.cpp
src/systemcmds/board/: CMakeLists.txt  board.cpp
src/systemcmds/config/: CMakeLists.txt  config.c
src/systemcmds/drivers/: CMakeLists.txt  drivers.cpp
(+3288 files in other folders)
